--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "@my-scope/my-package-name",
-  "version": "0.9.4",
-  "description": "My package is wonderful",
+  "name": "@big3/ciber-modules",
+  "version": "0.0.1",
+  "description": "Modules for Ciber Applications",
   "keywords": [
-    "keyword1",
-    "keyword2"
+    "RSA",
+    "Blind Signature",
+    "Paillier",
+    "Secret Sharing"
   ],
   "license": "MIT",
   "author": {
-    "name": "My name",
-    "email": "email@myemaildomain.com"
+    "name": "Albert Sáez Núñez",
+    "email": "asaez@icc.ub.edu"
   },
-  "repository": "repoprovider:username/my-package-name",
+  "repository": "github:Big-3/Moduls-Ciber",
   "types": "./types/index.d.ts",
   "main": "./dist/cjs/index.node.cjs",
   "browser": "./dist/esm/index.browser.js",
